src/escjava/branches/Universes_bundle/ESCTools/Calvin/java/escjava/test/test50/NormalError.java
/* Copyright Hewlett-Packard, 2002 */

/**
 ** This file tests parsing of erroneous, normal escjava annotation comments
 **/

class NormalError {

    void wizard() {
	/*@(fobar*/      // error
    }
}
